fix padding bottom spacing on plan price

--- a/src/styles.css
+++ b/src/styles.css
@@ -510,7 +510,7 @@ a {
     font-size: 3.5em;
     font-family: 'DM Serif Display', serif;
     color: #36536B;
-    padding-bottom: 1.5em;
+    padding-bottom: 1em;
     border-bottom: 1px solid rgba(54, 83, 107, 0.25);
 }
 
